--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -116,6 +116,7 @@ ja:
   rb_label_link_to_original: "オリジナルのストーリーのリンクを含める"
   rb_label_copy_tasks: "タスクをコピー"
   rb_label_copy_tasks_none: "None"
+
   rb_label_copy_tasks_all: "全て"
   rb_label_copy_tasks_open: "開く"
 
@@ -197,4 +198,13 @@ ja:
     * コメントを除いた全てのストーリーとタスクの変更は削除されます
     * 現在の値は、全てのストーリーとタスクの初期値になります
     * ステータスはチケットのデフォルトのステータスになります
+
+  rb_label_copy_tasks_all: "All"
+  rb_label_copy_tasks_open: "Open"
+
+  label_issues: ストーリーにならないチケット
+  button_new_issue: チケットを作る
+
+  label_insert_spent_hour: "時間入力だよ"
+  label_update_spent_hour: "時間を編集したよ"
 
