--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,67 +1,67 @@
 ---
 ja: 
-  project_module_backlogs: バックログ
+  project_module_backlogs: Backlogs
   backlogs_active: active
   backlogs_any: any
   backlogs_card_specification: カード印刷のラベルタイプ
   backlogs_impediment: 障害事項
   backlogs_statistics_active_failed: "プロジェクトにはアクティビティがありません"
   backlogs_statistics_active: "プロジェクトには幾つかのアクティビティがあります"
-  backlogs_statistics_product_backlog_filled_failed: "プロダクトバックログが見つかりません"
-  backlogs_statistics_product_backlog_filled: "プロダクトバックログはストーリーを持っています"
-  backlogs_statistics_sprints_estimated_failed: "クローズされたもしくはアクティブなスプリントは残り時間がないストーリーが存在します"
-  backlogs_statistics_sprints_estimated: アクティブで最近クローズされたスプリントはタスクの残り時間が設定されています
-  backlogs_statistics_product_backlog_sized_failed: プロダクトバックログはサイズが合っていないストーリーを持っています
-  backlogs_statistics_product_backlog_sized: プロダクトバックログのストーリーはサイズが合っています
-  backlogs_statistics_sprint_notes_available_failed: スプリントは、振り返り/レビューノートを入力せずにクローズされました
-  backlogs_statistics_sprint_notes_available: 最近クローズされたスプリントは、振り返り/レビューノートがあります
-  backlogs_statistics_sprints_sized_failed: プロジェクトはアクティブなもしくは最近クローズされたスプリントに対しサイズが合っていないストーリーを含んでいます
-  backlogs_statistics_sprints_sized: アクティブで最近クローズされたスプリントは達成しています
-  backlogs_statistics_sizing_consistent_failed: "ストーリーサイズは残り時間に対して乖離しています"
-  backlogs_statistics_sizing_consistent: "ストーリーサイズは、残り時間に対して安定しています"
+  backlogs_statistics_product_backlog_filled_failed: "プロダクトBacklogが見つかりません"
+  backlogs_statistics_product_backlog_filled: "プロダクトBacklogはStoryを持っています"
+  backlogs_statistics_sprints_estimated_failed: "クローズされたもしくはアクティブなスプリントは残り時間がないStoryが存在します"
+  backlogs_statistics_sprints_estimated: アクティブで最近クローズされたSprintはTaskの残り時間が設定されています
+  backlogs_statistics_product_backlog_sized_failed: プロダクトBacklogはサイズが合っていないStoryを持っています
+  backlogs_statistics_product_backlog_sized: プロダクトBacklogのStoryはサイズが合っています
+  backlogs_statistics_sprint_notes_available_failed: Sprintは、振り返り/レビューノートを入力せずにクローズされました
+  backlogs_statistics_sprint_notes_available: 最近クローズされたSprintは、振り返り/レビューノートがあります
+  backlogs_statistics_sprints_sized_failed: プロジェクトはアクティブなもしくは最近クローズされたSprintに対しサイズが合っていないStoryを含んでいます
+  backlogs_statistics_sprints_sized: アクティブで最近クローズされたSprintは達成しています
+  backlogs_statistics_sizing_consistent_failed: "Storyサイズは残り時間に対して乖離しています"
+  backlogs_statistics_sizing_consistent: "Storyサイズは、残り時間に対して安定しています"
   backlogs_statistics_yield_failed: "プロジェクトは低い平均値を出しています"
   backlogs_statistics_yield: "プロジェクトは良い平均値を出しています"
-  backlogs_statistics_committed_velocity_stable_failed: "承認されたベロシティはスプリントをまたがって安定していません"
-  backlogs_statistics_committed_velocity_stable: "承認されたベロシティはスプリントをまたがって安定しています"
+  backlogs_statistics_committed_velocity_stable_failed: "承認されたベロシティはSprintをまたがって安定していません"
+  backlogs_statistics_committed_velocity_stable: "承認されたベロシティはSprintをまたがって安定しています"
   backlogs_statistics_sizing_stddev: "ポイントに対する時間の標準偏差 %{value} 時間"
-  backlogs_statistics_sprints: "%{value} スプリントに渡って測定されています"
+  backlogs_statistics_sprints: "%{value} Sprintに渡って測定されています"
   backlogs_statistics_velocity: "ベロシティ: %{value}"
   backlogs_statistics_velocity_stddev: "ベロシティの標準偏差: %{value} ポイント"
   backlogs_points_burn_direction: ポイントのバーンアップ/ダウン
-  backlogs_product_backlog: "プロダクトバックログ"
-  backlogs_sprints: "スプリント"
-  backlogs_story: "ストーリー"
-  backlogs_story_tracker: "ストーリーに利用するトラッカー"
-  backlogs_task: "タスク"
-  backlogs_task_tracker: "タスクとして利用のトラッカー"
-  backlogs_wiki_template: "スプリントのテンプレートのWikiページ"
+  backlogs_product_backlog: "Product Backlog"
+  backlogs_sprints: "Sprint"
+  backlogs_story: "Story"
+  backlogs_story_tracker: "Storyに利用するトラッカー"
+  backlogs_task: "Task"
+  backlogs_task_tracker: "Taskとして利用のトラッカー"
+  backlogs_wiki_template: "SprintのテンプレートのWikiページ"
   backlogs_burndown_print_width: バーンダウンの印刷の幅
   backlogs_burndown_print_height: バーンダウンの印刷の高さ
-  backlogs_auto_assign_task: 現在のユーザにタスクを自動でアサイン
+  backlogs_auto_assign_task: 現在のユーザにTaskを自動でアサイン
   backlogs_include_sat_and_sun: 土曜と日曜をバーンダウンに含める
   button_edit_wiki: "Wikiページの編集"
   comma_delimited_numbers: "カンマで区切った数字(ex: 1,2,3,5,8,13,...)"
-  current_open_story_points: "現在オープンしているストーリーポイント:"
+  current_open_story_points: "現在オープンしているStoryポイント:"
   error_blank: "ブランクにしないでください"
   error_greater_than_start_date: 開始日より前にできません
   error_inclusion: はリストに含まれていません
   error_intro_plural: "下記のエラーが発生しました:"
   error_intro_singular: "下記のエラーが発生しました:"
-  error_must_have_comma_delimited_list: "ストーリーもしくはタスクのIDはカンマ「,」で区切ってください"
-  error_no_workflow_for_task_tracker: "タスクトラッカーのアクセス権がありません。エラーだと思う場合は、管理者にワークフローの更新を依頼してください"
+  error_must_have_comma_delimited_list: "StoryもしくはTaskのIDはカンマ「,」で区切ってください"
+  error_no_workflow_for_task_tracker: "Taskトラッカーのアクセス権がありません。エラーだと思う場合は、管理者にワークフローの更新を依頼してください"
   error_outro: 送信する前に、上記のエラーを訂正してください
   error_release_end_after_start: リリース終了日は開始日の後に設定してください
   error_taken: は既に利用されています
   event_sprint_summary: "%{project}: %{summary}"
-  field_backlogs_issue_type: バックログタイプ
+  field_backlogs_issue_type: Backlogタイプ
   field_blocks: ブロック
-  field_initial_story_points: 初期ストーリーポイント
+  field_initial_story_points: 初期Storyポイント
   field_name: 名前
   field_number_of_snapshots: ポイントをスナップショットとして保存
   field_position: Position
   field_release_end_date: リリース終了日
   field_release_start_date: リリース開始日
-  field_story_points: ストーリーポイント
+  field_story_points: Storyポイント
   field_subject: 題名
   field_tracker_id: トラッカーID
   field_velocity_based_estimate: 残り時間に基づくベロシティ
@@ -73,8 +73,8 @@ ja:
   field_time_entry_spend_on: 作業内容
   field_time_entry_comments: コメント
   label_back_to_project: プロジェクトページへ戻る
-  label_backlogs: バックログ
-  label_backlogs_unconfigured: "バックログが設定されていません。設定画面 %{administration} > %{plugins}, からリンク %{configure} をクリックして設定してください。フィールドを設定後、このページへ戻りツールを利用してください。"
+  label_backlogs: Backlogs
+  label_backlogs_unconfigured: "Backlogが設定されていません。設定画面 %{administration} > %{plugins}, からリンク %{configure} をクリックして設定してください。フィールドを設定後、このページへ戻りツールを利用してください。"
   label_burndown: バーンダウン
   label_chart_options: チャートオプション
   label_hours: 時間
@@ -82,7 +82,7 @@ ja:
   label_hours_remaining: 残り時間
   label_hours_required_burn_rate: 必要なバーンレート(時間)
   label_impediments: 障害事項
-  label_master_backlog: マスターバックログ
+  label_master_backlog: "Master Backlog"
   label_not_prioritized: 優先度が未設定
   label_points: ポイント
   label_points_accepted: 進行中のポイント
@@ -93,8 +93,8 @@ ja:
   label_points_resolved: 完了したポイント
   label_points_to_accept: 着手すべきポイント
   label_points_to_resolve: 解決すべきポイント
-  label_product_backlog: プロダクトバックログ
-  label_product_cards: プロダクトバックログカード
+  label_product_backlog: "Product Backlog"
+  label_product_cards: プロダクトBacklogカード
   label_release: リリース
   label_release_end_date: リリースと日付
   label_release_new: 新しいリリース
@@ -102,7 +102,7 @@ ja:
   label_release_plural: リリース
   label_release_start_date: リリース開始日
   label_release_end_date: リリース日
-  field_initial_story_points: 初期ストーリーポイント
+  field_initial_story_points: 初期Storyポイント
   error_release_end_after_start: リリース終了日は開始日の後ろに設定してください
   field_number_of_snapshots: ポイントのスナップショットを保存
 
@@ -113,25 +113,25 @@ ja:
   error_blank: "ブランクにできません"
   error_greater_than_start_date: "開始日より前にできません"
 
-  rb_label_link_to_original: "オリジナルのストーリーのリンクを含める"
-  rb_label_copy_tasks: "タスクをコピー"
+  rb_label_link_to_original: "オリジナルのStoryのリンクを含める"
+  rb_label_copy_tasks: "Taskをコピー"
   rb_label_copy_tasks_none: "None"
 
   rb_label_copy_tasks_all: "全て"
   rb_label_copy_tasks_open: "開く"
 
   # Permission
-  permission_reset_sprint: "スプリントのリセット"
-  permission_view_master_backlog: "マスターバックログの閲覧"
+  permission_reset_sprint: "Sprintのリセット"
+  permission_view_master_backlog: "マスターBacklogの閲覧"
   permission_view_releases: "リリースの閲覧"
-  permission_view_taskboards: "かんばんの閲覧"
+  permission_view_taskboards: "Taskboardの閲覧"
   permission_modify_releases: "リリースの編集"
-  permission_create_sprints: "スプリントの作成"
-  permission_update_sprints: "スプリントの更新"
-  permission_create_stories: "ストーリーの作成"
-  permission_update_stories: "ストーリーの更新"
-  permission_create_tasks: "タスクの作成"
-  permission_update_tasks: "タスクの更新"
+  permission_create_sprints: "Sprintの作成"
+  permission_update_sprints: "Sprintの更新"
+  permission_create_stories: "Storyの作成"
+  permission_update_stories: "Storyの更新"
+  permission_create_tasks: "Taskの作成"
+  permission_update_tasks: "Taskの更新"
   permission_create_impediments: "障害事項の作成"
   permission_update_impediments: "障害事項の更新"
   permission_subscribe_to_calendars: "カレンダーへの取り込み"
@@ -141,68 +141,68 @@ ja:
   # Tooltips
   story_description: "説明"
   story_status: "ステータス"
-  story_points: "ストーリーポイント"
+  story_points: "Storyポイント"
   story_estimation_hours: "見積もり(時間)"
   story_remaining_hours: "残り時間(時間)"
   story_spent_time: "消費時間"
   rb_taskboard_card_order: カードの印刷順
   label_scrum_statistics: スクラム統計
   label_select_all: 全て選択
-  label_sprint_backlog: スプリントバックログ
-  label_sprint_cards: スプリントカード
-  label_sprint_impediments: スプリント障害事項
-  label_sprint_name: "スプリント: %{name}"
-  label_stories: ストーリー
-  label_stories_tasks: ストーリー/タスク
-  label_task_board: かんばん
+  label_sprint_backlog: "Sprint Backlog"
+  label_sprint_cards: Sprintカード
+  label_sprint_impediments: Sprint障害事項
+  label_sprint_name: "Sprint: %{name}"
+  label_stories: Story
+  label_stories_tasks: Story/Task
+  label_task_board: "Task Board"
   label_webcal: Webcal Feed
-  label_new_story: 新しいストーリー
-  label_new_sprint: 新しいスプリント
+  label_new_story: 新しいStory
+  label_new_sprint: 新しいSprint
   label_download_sprint: ダウンロード
   label_reset: リセット
-  label_close_completed_sprints: 完了したスプリントをクローズ
+  label_close_completed_sprints: 完了したSprintをクローズ
   label_no_start: 開始日未設定
   label_no_end: 終了日未設定
-  label_hide_completed_sprints: 完了したスプリントを隠す
-  label_show_completed_sprints: 完了したスプリントを表示
+  label_hide_completed_sprints: 完了したSprintを隠す
+  label_show_completed_sprints: 完了したSprintを表示
   label_no_data_to_show: 表示するデータがありません
   label_column_width: 列の幅
-  rb_label_copy_tasks: タスクをコピー
+  rb_label_copy_tasks: Taskをコピー
   rb_label_copy_tasks_all: 全て
   rb_label_copy_tasks_none: なし
   rb_label_copy_tasks_open: 開く
-  rb_label_link_to_original: 元のストーリーへのリンクを含める
+  rb_label_link_to_original: 元のStoryへのリンクを含める
   rb_label_timelog_disable: 無効
   rb_label_timelog_enable: 有効
-  rb_task_cards_stories_then_tasks: 全てのストーリーを印刷した後、全てのタスクを印刷
-  rb_task_cards_story_follows_tasks: ストーリー、タスクの順に印刷
-  rb_task_cards_tasks_follow_story: タスク、ストーリーの順に印刷
+  rb_task_cards_stories_then_tasks: 全てのStoryを印刷した後、全てのTaskを印刷
+  rb_task_cards_story_follows_tasks: Story、Taskの順に印刷
+  rb_task_cards_tasks_follow_story: Task、Storyの順に印刷
   rb_taskboard_card_order: カードの印刷順
-  rb_timelog_from_taskboard: かんばんのタイムログ
+  rb_timelog_from_taskboard: Taskboardのタイムログ
   rb_show_burndown_in_sidebar: バーンダウンチャートをチケットのサイドバーに表示
-  rb_auto_refresh: バックログとかんばんの自動リフレッシュの間隔(秒)
+  rb_auto_refresh: BacklogとTaskboardの自動リフレッシュの間隔(秒)
   release_create_snapshot_today: 今日のストリーポイントのスナップショットを保存
-  release_update_snapshot_today: 今日のストーリーポイントのスナップショットを更新
-  remaining_story_points: 残りのストーリーポイント
+  release_update_snapshot_today: 今日のStoryポイントのスナップショットを更新
+  remaining_story_points: 残りのStoryポイント
   today_not_in_release_msg: "今日はリリース日の範囲に入っています。本当にスナップショットを保存しますか?"
   today_not_in_release_warning: "警告: 今日はリリース日の範囲に入っています"
   todo_issue_summary: "%{type}: %{summary}"
   use_free_text_if_empty: "もし空なら、ドロップダウンの代わりにテキストフィールドとして利用してください"
   warning_reset_sprint: |
-    このスプリントをリセットする際の注意！！
+    このSprintをリセットする際の注意！！
     
-    本当にスプリントをリセットしますか? スプリントのリセットは
-    ストーリーとタスクに次の影響があります:
+    本当にSprintをリセットしますか? Sprintのリセットは
+    StoryとTaskに次の影響があります:
     
-    * 作成日はスプリントの開始日に設定されます
-    * コメントを除いた全てのストーリーとタスクの変更は削除されます
-    * 現在の値は、全てのストーリーとタスクの初期値になります
+    * 作成日はSprintの開始日に設定されます
+    * コメントを除いた全てのStoryとTaskの変更は削除されます
+    * 現在の値は、全てのStoryとTaskの初期値になります
     * ステータスはチケットのデフォルトのステータスになります
 
   rb_label_copy_tasks_all: "All"
   rb_label_copy_tasks_open: "Open"
 
-  label_issues: ストーリーにならないチケット
+  label_issues: Storyにならないチケット
   button_new_issue: チケットを作る
 
   label_insert_spent_hour: "時間入力だよ"
