--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -208,3 +208,10 @@ ja:
   label_insert_spent_hour: "時間入力だよ"
   label_update_spent_hour: "時間を編集したよ"
 
+  field_base: "Error"
+  error_tasks_must_be_done_when_story_done: "タスクをすべて終了させてからストーリを終了させてね"
+  error_estimated_hours_is_empty: "旦那…。予定時間が入っていませんぜ？"
+  error_assignee_is_empty: "先生！担当者がいません！"
+  error_require_note: "後から思い出せるように経緯を書いてください。却下するなら却下した理由がありますよね。"
+
+
